Fix blog card spacing

--- a/src/styles/components/_article-footer-card.scss
+++ b/src/styles/components/_article-footer-card.scss
@@ -7,7 +7,8 @@
   border-radius: 20px;
   box-shadow: 0px 4px 30px rgba(29, 57, 95, 0.05);
   position: relative;
-  height: 426px;
+  height: 406px;
+    @include card-hover;
 
   &__tag {
     width: 64px;
